<resources>
    <string name="app_name">RemeberA</string>
    <string name="text_empty">Здесь пока ничего нет</string>
    <string name="text_clear_empty">Очистить неактивные</string>
    <string name="text_edit">Редактировать</string>
    <string name="text_clear_add_cost">Добавить расход</string>
    <string name="text_clear_all">Очистить все</string>
    <string name="text_remove">Удалить</string>
    <string name="text_error">Ошибка</string>
    <string name="text_new_list">Создать</string>
    <string name="text_create_list_item">Название списка</string>
    <string name="text_error_create_list">Ошибка при создании списка</string>
    <string name="text_select_icon">Иконка</string>
    <string name="text_list_added">Новый список создан</string>
    <string name="select_icon">Иконка</string>
    <string name="text_change_icon">Изменить иконку</string>
    <string name="text_empty_statistic_category">Не учитывать</string>
    <string name="create_category">Создать категорию</string>
    <string name="text_create">Ок</string>
    <string name="cost_statistic_title">Учитывать в расходах?</string>
    <string name="text_add_photo">Сделать фото</string>
    <string name="name_quantity_item">Название</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="text_item_created">Добавлено</string>
    <string name="text_select_gallery">Галерея</string>
    <string name="text_select_camera">Камера</string>
    <string name="text_add_photo_gallery">Выбрать из галереи</string>
    <string name="no_camera">На вашем устройстве нет камеры</string>
    <string name="error_todo_photo">Ошибка камеры</string>
    <string name="text_change">Изменить</string>
    <string name="error_show_img">Ошибка  показа изображения</string>
    <string name="text_name_error">Название не может быть пустым или меньше 3 символов</string>
    <string name="btn_expensive">РАСХОДЫ</string>
    <string name="btn_income">ДОХОДЫ</string>
    <string name="text_balance">ИТОГО</string>
    <string name="categories">Категории</string>
    <string name="text_month">Месяц</string>
    <string name="text_week">Неделя</string>
    <string name="text_today">День</string>
    <string name="text_other_period">Период</string>
    <string name="text_day">День</string>
    <string name="text_category_name">Название категории</string>
    <string name="text_create_list">Создать список покупок для этой  категории</string>
    <string name="text_create_category">Создать</string>
    <string name="amount">Сумма</string>
    <string name="text_comment">Комментарий</string>
    <string name="text_add">Добавить</string>
    <string name="text_name_or_icon_error">Ошибка в названии или не выбрана иконка</string>
    <string name="text_error_category_existed">Такая категория уже есть</string>
    <string name="text_name_length">Название не может быть больше 20 символов</string>
    <string name="text_error_set_history_category">Выберите категорию в которую хотите добавить расход</string>
    <string name="error_divide_0">Разделить на  0 нельзя</string>
    <string name="text_select_date">Выбранные даты</string>
    <string name="lists">Мои списки</string>
    <string name="text_error_add_cost">К этому списку не прикреплена категория расходов!</string>
    <string name="menu_finance">Мои финансы</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_feed">Оставить отзыв</string>
    <string name="menu_pro">Версия PRO</string>
    <string name="menu_mail_to_dev">Написать разработчикам</string>
    <string name="text_no_selected_finance_category">Не учитывать</string>
    <string name="text_sound">Говорите…</string>
    <string name="text_other_cat_statistic">Другое</string>
    <string name="text_empty_pie_chart">Нет данных для отображения</string>
    <string name="format_category_stat">%s %s</string>
    <string name="text_currency_format">%.2f %s</string>
    <string name="text_currency_stat_total_format">%s %s</string>
    <string name="text_currency_stat_total">Всего</string>
    <string name="text_date_period">%s - %s</string>
    <string name="text_ok">Ок</string>
    <string name="format_detail_stat_item">%s %s %.1f%%</string>
    <string name="menu_stat_cost">График расходов</string>
    <string name="menu_stat_income">График доходов</string>
    <string name="text_selected_currency">Валюта</string>
    <string name="text_color_theme">Цветовая схема</string>
    <string name="text_selected_language">Язык</string>
    <string name="text_save">Сохранить</string>
    <string name="title_list">Мои списки</string>
    <string name="text_send_list">Отправить список…</string>
    <string name="text_header_msg">Список покупок:</string>
    <string name="text_footer_msg">Создано с помощью приложения %s</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_dialog">Удалить?</string>
    <string name="text_positive_btn">Да</string>
    <string name="text_negative_btn">Нет</string>
    <string name="login_registrations">Логин</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_email">Email</string>
    <string name="text_password">Пароль</string>
    <string name="text_password2">Пароль еще раз</string>
    <string name="login_btn">Вход</string>
    <string name="text_registration_layout">Нет аккаунта?</string>
    <string name="text_registration">Регистрация</string>
    <string name="error_email_or_password">Email и/или пароль не могут быть пустыми</string>
    <string name="confirmation_code_dialog_title">Подтверждение email</string>
    <string name="confirmation_code_dialog_msg">Для того, чтоб ввойти и синхронизировать данные необходимо подвердить email и ввойти в приложение используя свой email и пароль. Инструкция выслана на указанныей email при регистрации.</string>
    <string name="confirmation_code_dialog_btn_enter_code">Ок</string>
    <string name="confirmation_code_dialog_btn_cancel">Отмена</string>
    <string name="text_error_password_or_email">Пароли не совпадают или некоректно указан email</string>
    <string name="internet_connection_error">Проверьте соединение с Интернет</string>
    <string name="empty_comment">Нет комментария</string>
    <string name="pattern_finance_comment">&lt;b>%s&lt;/b> %s</string>
    <string name="title_finance_detail">История</string>
    <string name="text_detail">История</string>
    <string name="subject_review_email">Отзыв и предложение</string>
    <string name="select_mail_app">Для отправки EMAIL</string>
    <string name="register_user_error">Ошибка регистрации! Попробуйте еще раз</string>
    <string name="text_login_error">Не удалось войти, проверьте  данные и повторите попытку</string>
    <string name="settings_user">Мой профиль</string>
    <string name="user_new_email">Новый email</string>
    <string name="user_new_password2">Повторите новый пароль</string>
    <string name="user_new_password">Новый  пароль</string>
    <string name="user_old_password">Пароль</string>
    <string name="user_settings_title">Профиль</string>
    <string name="logout">Выйти</string>
    <string name="text_error_password_to_change_email">Для смены email укажите пароль</string>
    <string name="text_error_empty_email">Поле email не может быть пустым</string>
    <string name="text_change_password">Изменить пароль</string>
    <string name="text_error_updated_email">Произошла ошибка! Повторите запрос позже</string>
    <string name="text_updated_email">Email успешно обновлен</string>
    <string name="text_error_equals_password">Новые пароли должны совпадать</string>
    <string name="text_error_old_password">Укажите текущий пароль</string>
    <string name="text_password_changed_success">Пароль изменен</string>
    <string name="text_password_changed_error">Пароль не изменен, произошла ошибка</string>
    <string name="title_share_dialog">Поделиться списком</string>
    <string name="msg_share">Для того чтобы поделится списком, скопируйте код и инструкцию и отправьте пользователю, у которого установлено приложение</string>
    <string name="btn_share_copy">Копировать</string>
    <string name="cancel">Отмена</string>
    <string name="text_to_share_list">token %s - вставьте этот текст в поле название при создания списка в приложении %s</string>
    <string name="text_error_to_share">Для того чтоб поделится списком необходимо подключить аккаунт PRO</string>
    <string name="text_error_connect_to_internet">Проверьте подключения к интернету</string>
    <string name="not_active_items">Список пустой или нет активных элементов</string>
    <string name="error_no_added_subscribe_list">"Ошибка! Вы указали не корректный токен "</string>
    <string name="register_text">Регистрация</string>
    <string name="menu_group">Моя группа</string>
    <string name="my_group">Моя группа</string>
    <string name="connect_to_group">Добавить в группу</string>
    <string name="disconnect_from_group">Выйти из группы</string>
    <string name="error_remove_user" >Не удалось удалить, возможно нет соединения с Интернетом</string>
    <string name="user_email">Email пользователя</string>
    <string name="text_add_user_to_group">Добавить</string>
    <string name="text_close_dialog">Закрыть</string>
    <string name="title_add_new_user">Добавить в группу пользователя</string>
    <string name="text_private">Сделать приватным</string>
    <string name="text_set_public">Сделать общедоступным</string>
    <string name="text_error_max_quantity">Без регистрации вы не можете  создать больше 3 списков</string>
    <string name="not_register_user">Для того чтобы создать группу или стать участником группы необходимо зарегистрироваться</string>
    <string name="error_upload_image">Превышен лимит изображений! Удалите изображения или перейдите на режим PRO</string>
    <string name="text_no_permissions">У вас нет прав для этого действия!</string>
    <string name="text_error_load_group">Произошла ошибка при загрузке</string>
    <string name="text_error_no_group_user">В группе нет пользователей</string>
    <string name="title_my_family">Моя семья</string>
    <string name="text_copy_uid">Копировать ID пользователя</string>
    <string name="error_copy_uid">Ошибка при копировании! Повторите позже</string>
    <string name="text_uid_copied">Скопировано! Отправьте этот код другому пользователю, чтоб стать участником его  группы и вести общие списки и категории финансов</string>
    <string name="user_uuid">Код пользователя</string>
    <string name="error_load_data">Ошибка загрузки данных!</string>
    <string name="text_error_uuid">Проверьте ID пользователя на корректность</string>
    <string name="text_logout_all">Выйти на всех устройствах</string>
    <string name="creating_new_list">Как создать новый список?</string>
    <string name="creating_new_list_text">Нажмите на \"+\" и впишите в поле название списка, который вы хотите создать</string>
</resources>