<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/menu_drawer_lists"
            android:icon="@drawable/ic_clipboar_list"
            android:title="@string/lists"/>
        <item android:id="@+id/menu_drawer_finance"
            android:icon="@drawable/ic_finance_icon"
            android:title="@string/menu_finance"/>
        <item android:id="@+id/menu_drawer_group"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_group"/>
        <item android:id="@+id/menu_drawer_stat_cost"
            android:icon="@drawable/ic_income"
            android:title="@string/menu_stat_cost"/>
        <item android:id="@+id/menu_drawer_stat_income"
            android:icon="@drawable/ic_cost"
            android:title="@string/menu_stat_income"/>
        <item android:id="@+id/menu_drawer_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
        <item android:id="@+id/menu_drawer_feed"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feed"/>
        <item android:id="@+id/menu_drawer_mail"
            android:icon="@drawable/ic_mail"
            android:title="@string/menu_mail_to_dev"/>
</menu>